<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.SearchNewsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/searchEditText"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/filterIcon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/colorWhite"
            android:elevation="3dp"
            android:padding="3dp"
            android:text="@string/all"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            app:icon="@drawable/ic_filter"
            app:iconGravity="end"
            app:layout_constraintEnd_toEndOf="@id/searchEditText"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/news_item_bg"
            android:drawableStart="@drawable/ic_search_icon"
            android:drawablePadding="5dp"
            android:elevation="3dp"
            android:hint="@string/search_news"
            android:imeActionLabel="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appTitle"
            tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchEditText"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_news_short" />

        <ProgressBar
            android:id="@+id/homeProgressBar"
            style="?attr/progressBarStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/homeAnimationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="empty_list.json"
            app:lottie_loop="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/category_bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>